# llm-security-firewall

./: .dockerignore  .env  .gitignore  .gitleaks.toml  .importlinter  .llmfwignore  .markdownlint-cli2.yaml  .markdownlint.json  .markdownlintrc  .pre-commit-config.yaml  .yamllint.yml  ARCHITECTURE.md  ATTACK_TESTING_COMPLETE_2025_10_31.md  ATTACK_TEST_SUMMARY_2025_10_31.md  BYPASSES_FOUND_2025_10_31.md  BYPASS_REPORT_2025_11_27_ULTIMATE.md  CHANGELOG.md  CITATION.cff  CI_FIXES_REPORT.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.txt  COMMIT_READY.md  CONSOLIDATION_REPORT_2025_10_28.md  CONTRIBUTING.md  DECISION_POST_FIX.md  DEPLOYMENT_SUMMARY.md  DOCKER_DEPLOYMENT.md  Dockerfile  EXECUTION_COMPLETE.md  FINAL_DECISION_HOTFIX_DEPLOY.md  FINAL_EVALUATION_RESULTS.md  FINAL_HOTFIX_SUMMARY.md  FINAL_TEST_RESULTS.md  FORENSIC_ANALYSIS_2025_10_28.md  GEMINI3_QUESTION_FALSE_POSITIVES.md  GEMINI3_QUESTION_RC10B_FALSE_POSITIVES_PERSISTENT.md  GITHUB_SETUP_INSTRUCTIONS.md  GITHUB_TOPICS.md  GITHUB_UPDATE_SUMMARY.md  GIT_PUSH_COMMANDS.md  (+149 more)
.github/: pull_request_template.md
analysis/: ANALYSIS_RESULTS_SUMMARY.md  RUNNING_ANALYSES.md  false_positive_analysis_post_fix.json  false_positive_analysis_post_fix_v2.json  threshold_calibration_kids.json
archive/: backup_main.py
bench/: claims_200.json  claims_200.seed.json  mk_claims.py  run_eval.py
benchmarks/: README.md  __init__.py  campaign_metrics.py  generate_dataset.py  llm_redteam_eval.py  persuasion_redteam_eval.py  phase2_validation.py  redteam_cgrf.py  run_benchmarks.py  run_benchmarks_safety.py  test_performance_meta_guard.py
cli/: llmfw_ab_sprt_job.py  llmfw_policy_check.py  llmfw_policy_verify.py  llmfw_safety_sandwich_demo.py  solo_dev_status.py
comm/: STAKEHOLDER_UPDATE_20251204.md
config/: answer_policy.yaml  ci-eval.yml  config.minimal.yaml  detectors.yml  evidence_pipeline.yaml  flags.yaml  gates.yaml  honesty_defaults.yaml  jailbreak_intents.txt  jailbreak_patterns.txt  layer15.yaml  online_learning_config.yaml  policy.yml  safety_blacklist.yaml  shadow_deploy.yaml  spatial_captcha.yaml  threat_detection_config.yaml
data/: README_datacard.md  __init__.py  benign_sample.csv  boundary_dataset_spec_v1.md  campaign_dataset.py  crisis_detection_synthetic_v1.jsonl  dev_sample.csv  embedding_seeds.csv  generated.csv  generated.example.csv  gpt5_adversarial_suite.jsonl  l3_train.jsonl  parametric_campaign_generator.py  phase2_dataset.json  real_redteam.csv  schema_guardnet.md  test_generated.jsonl
datasets/: combined_suite.jsonl  core_suite.jsonl  core_suite_CLEANED.jsonl  core_suite_smoke.jsonl  mixed_expanded_100.jsonl  mixed_small.jsonl  mixed_test.jsonl  test_e2e.jsonl  tool_abuse_suite.jsonl
deployment/: Dockerfile  docker-compose.yml
design/: risk_scorer_ab_test.md
detectors/: BEFEHLE.txt  QUICKSTART.md  README.md  start_services.sh  test_client.py  test_integration.py
docs/: .dockerignore  ANSWER_POLICY_DESIGN_DECISIONS.md  ANSWER_POLICY_EVALUATION_PHASE2.md  ANSWER_POLICY_EVALUATION_PHASE2_2_4_0.md  ANSWER_POLICY_EXPERIMENTS.md  ANSWER_POLICY_INTEGRATION.md  ANSWER_POLICY_METRICS.md  ANSWER_POLICY_REVIEW_CHECKPOINTS.md  ANSWER_POLICY_V01_QUICKSTART.md  ANSWER_POLICY_V01_RESULTS.md  ARCHITECTURE.md  ARCHITECTURE_EVOLUTION.md  BUGFIXES_KIMI_REVIEW.md  CHILDSAFE_VS_KIDS_POLICY_COMPARISON.md  CIRCULAR_ERROR_ANALYSIS.md  CORE_FIREWALL_V2_DIAGNOSIS.md  CORE_FIREWALL_v2_HANDOVER.md  CRITICAL_FIXES_IMPLEMENTATION.md  CRITICAL_ISSUES_REGISTER.md  CRITICAL_REVIEW_KIMI_K2.md  DATASETS_OVERVIEW.md  DEEPSEEK_ANSWERS.md  DEEPSEEK_TEST_DEVELOPMENT_GUIDE.md  DEPENDENCY_ELIMINATION_PLAN.md  DEPLOYMENT_PROTOCOL_SOLO.md  DEVELOPER_ADOPTION_IMPLEMENTATION.md  DOCKER_DEPLOYMENT.md  EXTERNAL_REVIEW_RESPONSE.md  FAILURE_REPORT_2025_11_28.md  FINAL_VALIDATION_REPORT_2025_12_02.md  FIX_IMPLEMENTATION_GUIDE.md  HANDOVER_2025_12_01.md  HANDOVER_2025_12_02.md  HANDOVER_V3_2025_12_06.md  INSTALL.md  INTEGRATION_STATUS.md  INTEGRATION_TEST_GUIDE.md  KIMI_FINAL_VERDICT.md  LANGCHAIN_INTEGRATION_PLAN.md  LAUNCH_MARKETING_SNIPPETS.md  (+63 more)
eval/: persuasion_suite.yaml
examples/: answer_policy_example.py  demo_multi_gate.py  dynamic_hybrid_example.py  langchain_integration.py  minimal_fastapi.py  quantum_inspired_example.py  quickstart.py  quickstart_fastapi.py
k8s/: auto-monitor-cronjob.yml  hakgal-service.yml  redis-cloud-secret.yml
kids_policy/: README.md  __init__.py  context_classifier.py  engine.py  fallback_judge.py  firewall_engine_v2.py  meta_exploitation_guard.py  persona_skeptic.py  pragmatic_safety.py  response_templates.py  security.py  session_context.py  session_monitor.py  unicode_sanitizer.py
llm_firewall/: README.md
logs/: baseline_core_suite_full_core_suite.jsonl  baseline_mixed_expanded_100.jsonl  baseline_mixed_small.jsonl  baseline_smoke_test_core_core_suite_smoke.jsonl  baseline_test.jsonl  default_core_suite_full_core_suite.jsonl  default_smoke_test_core_core_suite_smoke.jsonl  default_test.jsonl  evaluation_post_fix_kids.jsonl  evaluation_post_fix_kids_v2.jsonl  evidence_final_scaled.jsonl  internal_debug_core_suite_full_core_suite.jsonl  kids_boost_0.3_stretch_2.0.jsonl  kids_boost_0.3_stretch_3.0.jsonl  kids_boost_0.4_continuous.jsonl  kids_boost_0.4_stretch_2.0.jsonl  kids_core_suite_full_core_suite.jsonl  kids_evidence_full_evaluation.jsonl  kids_evidence_policy_test.jsonl  kids_evidence_smoke.jsonl  kids_heuristic_full.jsonl  kids_heuristic_smoke.jsonl  kids_mixed_small.jsonl  kids_smoke_test_core_core_suite_smoke.jsonl  kids_test.jsonl  test_baseline_e2e.jsonl  test_kids_e2e.jsonl  test_optimized_mass.jsonl  test_scaled_linear.jsonl
models/: code_intent_adversarial_v2_calibration.json  code_intent_adversarial_v2_calibration_temp.json  quantum_cnn_champion_metadata.json
monitoring/: alert_rules.yaml  defense_coverage_matrix.csv  prometheus.yml  security_dashboard.py  sql_health_checks.sql
policies/: base.yaml
red_team_results/: red_team_20251211_184859.json  red_team_20251211_190040.json  red_team_20251211_190926.json  red_team_20251211_191403.json  red_team_20251211_192327.json
research_papers/: README.md
(+2971 files in other folders)
